--- a/index.html
+++ b/index.html
@@ -110,12 +110,11 @@
       <p class="copyright">
         &copy; Copyright by
         <a
-          class="twitter-link"
+          class="portfolio-link"
           target="_blank"
-          href="https://twitter.com/jonasschmedtman"
-          >Jonas Schmedtmann</a
-        >. Use for learning or your portfolio. Don't use to teach. Don't claim
-        as your own.
+          href="https://bitterkofte.vercel.app"
+          >Hasan Talha Çelik</a
+        >
       </p>
     </div>
 
