Added welcome text for informing.

--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
     <script defer src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
     <script defer src="script.js"></script>
-    <title>mapty // Map your workouts</title>
+    <title>Runny</title>
   </head>
   <body>
     <div class="sidebar">
       <img src="logo.png" alt="Logo" class="logo" />
 
       <ul class="workouts">
+        <div class='info'>Click somewhere on the map to create a workout plan.</div>
         <form class="form hidden">
           <div class="form__row">
             <label class="form__label">Type</label>
