A button has been added to zoom to fit all the markers on the map. And some style changes have been made.

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
       <ul class="workouts">
         <div class='info'>Click somewhere on the map to create a workout plan.</div>
         <form class="form hidden">
+          <span class="material-symbols-outlined close-form-btn">close</span>
           <div class="form__row">
             <label class="form__label">Type</label>
             <select class="form__input form__input--type">
@@ -115,6 +116,8 @@
       </p>
     </div>
 
-    <div id="map"></div>
+    <div id="map">
+      <span class="material-symbols-outlined zoom-out">zoom_out_map</span>
+    </div>
   </body>
 </html>
