--- a/index.html
+++ b/index.html
@@ -22,7 +22,14 @@
     <div class="sidebar">
       <img src="logo.png" alt="Logo" class="logo" />
       <div class='header'>
-        <h1>Workouts</h1>
+        <h1 class="dropdown">Workouts</h1>
+        <div class="dropdown-content hidden">
+          <p class="dd-item" data-select="workouts">Workouts</p>
+          <p class="dd-item" data-select="running">Running</p>
+          <p class="dd-item" data-select="cycling">Cycling</p>
+          <p class="dd-item" data-select="deleteAll">Delete All</p>
+        </div>
+        <div class="overlay hidden"></div>
         <div class="sort-container">
           <div class='srt-btn' data-type="date">
             <span class="material-symbols-outlined normal">
