Modal an deleteAll functions are now fully funcitonal. And logo has been updated.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="shortcut icon" type="image/png" href="/icon.png" />
+    <link rel="shortcut icon" type="image/png" href="/assets/runny-logo.png" />
 
     <link
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700;800&display=swap"
@@ -21,8 +21,8 @@
   <body>
     <div class='w-modal hidden'>
       <span class="material-symbols-outlined cls-btn">close</span>
-      <h2 class="">Warning</h2>
-      <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea repudiandae eum illo praesentium consequuntur? Suscipit ea, cumque libero tenetur in error numquam non voluptates omnis inventore minus commodi nemo blanditiis?</p>
+      <h2 class="m-title">Warning</h2>
+      <p class="m-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea repudiandae eum illo praesentium consequuntur? Suscipit ea, cumque libero tenetur in error numquam non voluptates omnis inventore minus commodi nemo blanditiis?</p>
       <div class='btn-cnt'>
         <button class="cancel-btn">Cancel</button>
         <button class="ok-btn">OK</button>
@@ -30,7 +30,7 @@
     </div>
     <div class="w-overlay hidden"></div>
     <div class="sidebar">
-      <img src="logo.png" alt="Logo" class="logo" />
+      <img src="/assets/runny.svg" alt="Logo" class="logo" />
       <div class='header'>
         <h1 class="dropdown">
           Workouts
