--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="shortcut icon" type="image/png" href="/assets/runny-logo.png" />
+    <link rel="shortcut icon" type="image/png" href="assets/runny-favicon.png" />
 
     <link
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700;800&display=swap"
@@ -30,7 +30,7 @@
     </div>
     <div class="w-overlay hidden"></div>
     <div class="sidebar">
-      <img src="/assets/runny.svg" alt="Logo" class="logo" />
+      <img src="assets/runny.svg" alt="Logo" class="logo" />
       <div class='header'>
         <h1 class="dropdown">
           Workouts
@@ -145,6 +145,9 @@
 
         <div class='workout-list'>
 
+          <!-- <form class="w-editing hidden">
+            <input type="text"/>
+          </form> -->
         </div>
       </ul>
 
