--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
     <div class="w-overlay hidden"></div>
     <div class="sidebar">
-      <img src="assets/runny.svg" alt="Logo" class="logo" />
+      <img src="assets/runny.png" alt="Logo" class="logo" />
       <div class='header'>
         <h1 class="dropdown">
           Workouts
